# wp2-policy-classification-service

./: README.md  pyproject.toml
policy_classifier/classes/: crawler.py  detector.py
policy_classifier/data/: rules.py
server/: app.py
server/classes/: crawler.py  detector.py
server/controllers/: policy_detector.py
server/data/: activities.json  re3data_names.json  rules.py
server/models/: __init__.py  detect_by_text.py  detect_by_url.py  policy_terms.py
server/yaml/: swagger.yaml
